[package]
name = "image-diff"
authors = ["James Rodgers <rodgjame@gmail.com>"]
version = "0.1.0"
description = "Detect the difference between 2 images"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
image = "0.23.14"